Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15608

DIO broken for encrypted files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.15.0
    • Lustre 2.15.0
    • 3
    • 9223372036854775807

      In case of direct IO, the page index is not calculated correctly when doing encryption and decryption. With Direct IO, because we do not have proper page cache pages, we need to retrieve by ourselves the page mapping and the page index of the page to be encrypted/decrypted. For this we use (struct brw_page*)->off. Unfortunately, this offset is not relative to the whole file, but it is just an offset within the object. At the end of the road, it means we do not use consistent indexes between the buffered IO and direct IO cases. And more specifically, the indexes used by the direct IO case can repeat (if we access pages at the same offset but in different stripes), which is bad.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: